@@ -60,6 +60,7 @@ Other contributors:
   Andreas Schwab <schwab@issan.informatik.uni-dortmund.de>
   Carl Staelin (Princeton University)
   Ian Stewartson (Data Logic Limited)
+  Ramon Garcia Fernandez <ramon.garcia.f@gmail.com>
 
 With suggestions/comments/bug reports from a cast of ... well ...
 hundreds, anyway :)
